--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "gsap": "^3.12.5",
+    "heroicons": "^2.1.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
+    "@types/mailchimp__mailchimp_marketing": "^3.0.19",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
