--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "heroicons": "^2.1.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-social-icons": "^6.15.0"
+    "react-social-icons": "^6.15.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/mailchimp__mailchimp_marketing": "^3.0.19",
