--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@heroicons/react": "^2.1.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "clsx": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
     "heroicons": "^2.1.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-social-icons": "^6.15.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/mailchimp__mailchimp_marketing": "^3.0.19",
     "@types/node": "^20",
     "@types/react": "^18",
