--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@next/font": "^14.1.4",
     "clsx": "^2.1.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.5",
